#  Mod:
#        20-Mar-2010, S. Hoobler          (SONYA)
#          release EDT_CL-R2-2-0
#        29-Apr-2009, K. Luchini          (LUCHINI)
#          release EDT_CL-R2-0-0
#        08-Oct-2007, K. Luchini          (LUCHINI):
#          release EDT_CL-R1-3-7
#          release EDT_CL-R1-3-6
#
#==============================================================
#
#
EDT_CL-R2-3-0:      Major changes to the IP900CL-12B camera support
		    Added option start data acquisition of images
	            and save them to a given directory when
	            finished. A sequencer disables the camera trigger
		    while files are being saved.
		    The image buffer is now per IOC, not per camera,
		    which means only one camera can perform a DAQ.
		    A DAQ is triggered by an EVR event (default to
	  	    event 16 - 0.5Hz).

EDT_CL-R2-2-2:      Modified release file to follow eco.
                    needed to define macros for min() and max()
                    as these were removed from EPICS BASE R3-14-11 and
                    higher. 
      
EDT_CL-R2-2-1:      Reduce ring buffer size of PTM4200 from 10 to 5 to save memory

EDT_CL-R2-2-0:     Build with base-R3-14-8-2-lcls6
                   Build with rtems-4.9.4

EDT_CL-R2-1-1:     Build with base-R3-14-8-2-lcls5
                   Build with rtems-4.9.3

EDT_CL-R2-0-1      Add SMOO record for laser PTM6710CL centroid to lock
                   Build with rtems-4.9.1 and base-r3-14-8-2-lcls3

EDT_CL-R2-0-0      Build with rtems-4.9.1 and base-r3-14-8-2-lcls3

TODO:             Change p2pthreshold/pixel to float value and give more explanation
                  Add minimal number of pixel noise
                  Add timestamp event ID record
                  Add I/O Intr for waveform record

EDT_CL-R1-4-1:
                  Add take debug tool
EDT_CL-R1-4-0:
                  Add UP685 support, both 10b and 8b, both freerun and pulse width mode

EDT_CL-R1-3-9:    Add support of PULNiX TM4200CL PW mode for XTOD